add block and flex

--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
                 alt="foto-product-designer"
                 width="264"
               />
-              <h3 class="team-subtitle">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-description">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -123,13 +125,17 @@
                 alt="foto-frontend-developer"
                 width="264"
               />
-              <h3 class="team-subtitle">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-description">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img03.jpg" alt="foto-marketing" width="264" />
-              <h3 class="team-subtitle">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-description">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -137,8 +143,10 @@
                 alt="foto-ui-designer"
                 width="264"
               />
-              <h3 class="team-subtitle">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-description">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -154,8 +162,10 @@
                 alt="portfolio-banking-app"
                 width="360"
               />
-              <h3 class="portfolio-subtitle">Banking App</h3>
-              <p class="portfolio-category">App</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-category">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -163,8 +173,10 @@
                 alt="portfolio-cashless-payment"
                 width="360"
               />
-              <h3 class="portfolio-subtitle">Cashless Payment</h3>
-              <p class="portfolio-category">Marketing</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -172,8 +184,10 @@
                 alt="portfolio-meditation-app"
                 width="360"
               />
-              <h3 class="portfolio-subtitle">Meditation App</h3>
-              <p class="portfolio-category">App</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-subtitle">Meditation App</h3>
+                <p class="portfolio-category">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -181,8 +195,10 @@
                 alt="portfolio-taxi-service"
                 width="360"
               />
-              <h3 class="portfolio-subtitle">Taxi Service</h3>
-              <p class="portfolio-category">Marketing</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-subtitle">Taxi Service</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -190,8 +206,10 @@
                 alt="portfolio-screen-illustrations"
                 width="360"
               />
-              <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-              <p class="portfolio-category">Design</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                <p class="portfolio-category">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -199,8 +217,10 @@
                 alt="portfolio-online-courses"
                 width="360"
               />
-              <h3 class="portfolio-subtitle">Online Courses</h3>
-              <p class="portfolio-category">Marketing</p>
+              <div class="portfolio-description">
+                <h3 class="portfolio-subtitle">Online Courses</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -208,7 +228,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container footer-container">
+      <div class="container">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
